[gd_scene load_steps=11 format=3 uid="uid://cqi7b1uis5b7k"]

[ext_resource type="PackedScene" uid="uid://baut7l07kp2rc" path="res://scenes/abcs/abc_projectile.tscn" id="1_1rweh"]
[ext_resource type="Script" path="res://scenes/templates/projectile_throwable.gd" id="2_bbj4i"]
[ext_resource type="Script" path="res://scripts/components/functionals/spawner.gd" id="3_1074t"]
[ext_resource type="Script" path="res://scripts/components/functionals/supply_container.gd" id="4_xyxv7"]
[ext_resource type="Script" path="res://scripts/components/functionals/supply.gd" id="5_l37ln"]
[ext_resource type="Script" path="res://scripts/components/functionals/death_trigger.gd" id="5_oufxx"]
[ext_resource type="Script" path="res://scripts/components/functionals/physics_movement.gd" id="7_v8jiw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w41mh"]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id="CircleShape2D_5b1f2"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_c4tc5"]
resource_local_to_scene = true
script = ExtResource("5_l37ln")
type = 1
max_value = 999
regeneration_per_second = 0.0

[node name="ProjectileThrowable" instance=ExtResource("1_1rweh")]
script = ExtResource("2_bbj4i")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_w41mh")

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_5b1f2")

[node name="OnHitEffectSpawner" type="Node2D" parent="." index="3"]
script = ExtResource("3_1074t")

[node name="OnDeathEffectSpawner" type="Node2D" parent="." index="4"]
script = ExtResource("3_1074t")

[node name="SupplyContainerComponent" type="Node" parent="." index="5"]
script = ExtResource("4_xyxv7")
_editor_supplies = Array[ExtResource("5_l37ln")]([SubResource("Resource_c4tc5")])

[node name="DeathTrigger" type="Node" parent="." index="6" node_paths=PackedStringArray("_root", "_supply_container", "_destroy_effect_spawner")]
script = ExtResource("5_oufxx")
_root = NodePath("..")
_supply_container = NodePath("../SupplyContainerComponent")
_supply_type = 1
_destroy_effect_spawner = NodePath("../OnDeathEffectSpawner")

[node name="PhysicsMovementComponent" type="Node" parent="." index="7"]
script = ExtResource("7_v8jiw")
